--- a/Mavenjava/test-output/old/Default suite/methods.html
+++ b/Mavenjava/test-output/old/Default suite/methods.html
@@ -1,8 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8b8b72">  <td>23/07/04 22:47:48</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;DemoTest.tearDown()[pri:0, instance:org.rahulsheety.DemoTest@3c0fbd3a]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@496425074</td>   <td></td> </tr>
-<tr bgcolor="8b8b72">  <td>23/07/04 22:47:44</td>   <td>-3904</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoTest.OpenBrowser()[pri:0, instance:org.rahulsheety.DemoTest@3c0fbd3a]">OpenBrowser</td> 
-  <td>main@496425074</td>   <td></td> </tr>
+<tr bgcolor="918c99">  <td>23/07/11 00:05:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LocatorsTest.OpenBrowser()[pri:0, instance:org.rahulsheety.LocatorsTest@71ba6d4e]">OpenBrowser</td> 
+  <td>main@253601149</td>   <td></td> </tr>
 </table>
