--- a/PageObjectFramework/test-output/index.html
+++ b/PageObjectFramework/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Bharath\AppData\Local\Temp\testng-eclipse-1056212995\testng-customsuite.xml</span>
+                    <span>C:\Users\Bharath\AppData\Local\Temp\testng-eclipse--1722690158\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -129,8 +129,10 @@
                   <a name="staticdropdown">
                   </a> <!-- staticdropdown -->
                   <span class="method-name">staticdropdown</span>
-                  <div class="stack-trace">java.lang.ClassCastException: class org.openqa.selenium.By$ByXPath cannot be cast to class org.openqa.selenium.WebElement (org.openqa.selenium.By$ByXPath and org.openqa.selenium.WebElement are in unnamed module of loader &apos;app&apos;)
-	at org.testpacks.TC1.staticdropdown(TC1.java:25)
+                  <div class="stack-trace">java.lang.NullPointerException: Cannot invoke &quot;org.openqa.selenium.WebElement.getTagName()&quot; because &quot;element&quot; is null
+	at org.openqa.selenium.support.ui.Select.&lt;init&gt;(Select.java:46)
+	at org.functions.Webfunctions.staticdropdownbyText(Webfunctions.java:28)
+	at org.testpacks.TC1.staticdropdown(TC1.java:28)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -168,7 +170,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Bharath\AppData\Local\Temp\testng-eclipse-1056212995\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Bharath\AppData\Local\Temp\testng-eclipse--1722690158\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -221,12 +223,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'staticdropdown')
 data.setCell(0, 2, 'org.testpacks.TC1')
-data.setCell(0, 3, 56);
+data.setCell(0, 3, 3917);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 56 ms</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
